; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_lis3l02dq_ring.c_lis3l02dq_poll_func_th.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_lis3l02dq_ring.c_lis3l02dq_poll_func_th.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.lis3l02dq_state = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iio_dev*)* @lis3l02dq_poll_func_th to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lis3l02dq_poll_func_th(%struct.iio_dev* %0) #0 {
  %2 = alloca %struct.iio_dev*, align 8
  %3 = alloca %struct.lis3l02dq_state*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %2, align 8
  %4 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %5 = call %struct.lis3l02dq_state* @iio_dev_get_devdata(%struct.iio_dev* %4)
  store %struct.lis3l02dq_state* %5, %struct.lis3l02dq_state** %3, align 8
  %6 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %7 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %3, align 8
  %12 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %11, i32 0, i32 2
  store i32 %10, i32* %12, align 4
  %13 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %3, align 8
  %14 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %13, i32 0, i32 1
  %15 = call i32 @schedule_work(i32* %14)
  %16 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %3, align 8
  %17 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %16, i32 0, i32 0
  store i32 1, i32* %17, align 4
  ret void
}

declare dso_local %struct.lis3l02dq_state* @iio_dev_get_devdata(%struct.iio_dev*) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
